All in place, need to fix the overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body{
 
 .col{
     float: left;
-    margin: 1% 0;
+    margin: 10px 0;
 }
 
 .container{
@@ -57,12 +57,6 @@ H4{
     cursor: pointer;
 }
 
-.header-background{
-    height: 50px;
-    background-color: white;
-    display: inline-block;
-}
-
 .image{
     margin-top: 20px;
     background-image: url("../img/banner.jpg");
@@ -100,6 +94,7 @@ H4{
 
 .columns{
     margin-top: 20px;
+    overflow: hidden;
 }
 
 .column-opacity{
@@ -110,8 +105,8 @@ H4{
 
 .col.col-left{
     height: 330px;
-    width: 19%;
-    margin-right: 1%;
+    width: 20%;
+    padding-right: 10px;
 }
 
 #img-1{
@@ -141,8 +136,8 @@ H4{
 
 .col.col-right{
     height: 330px;
-    width: 19%;
-    margin-left: 1%;
+    width: 20%;
+    padding-left: 10px;
 }
 
 #img-3{
